--- a/locales/en/LC_MESSAGES/main.po
+++ b/locales/en/LC_MESSAGES/main.po
@@ -3,19 +3,20 @@
 # This file is distributed under the same license as the PROJECT project.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2020.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2020-06-24 21:53+0300\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2020-06-24 22:10+0300\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: en\n"
+"X-Generator: Poedit 2.3.1\n"
 
 #: main.py:55
 msgid "File"
@@ -147,9 +148,10 @@ msgstr ""
 
 #: main.py:346
 msgid ""
-"Steam account switcher<br>Author: Tommi Saira "
-"&lt;tommi@saira.fi&gt;<br>Url: <a "
-"href='https://github.com/tommis/steam_account_switcher'>github.com/tommis/steam_account_switcher</a>"
+"Steam account switcher<br>Author: Tommi Saira &lt;"
+"tommi@saira.fi&gt;<br>Url: <a href='https://github."
+"com/tommis/steam_account_switcher'>github.com/tommis/"
+"steam_account_switcher</a>"
 msgstr ""
 
 #: main.py:369
@@ -177,4 +179,3 @@ msgstr ""
 #: main.py:471
 msgid "default"
 msgstr ""
-
